# ProductApplication/src/main/java/org/example/productcatalog/web/controller/UserController.java
@@ -30,7 +30,7 @@ import static org.example.productcatalog.preset.ProductCatalogInit.*;
 public class UserController {
     private final CrudService<UserDto, String> service;
     @Value("${spring.data.web.pageable.default-page-size}")
-    private int pageSize;
+    private int defaultPageSize;
 
     @Inject
     public UserController(UserService service) { this.service = service; }
@@ -76,10 +76,13 @@ public class UserController {
     @RequestMapping(method = RequestMethod.GET, path = "/identity", consumes = MediaType.APPLICATION_JSON_VALUE)
     @ResponseStatus(HttpStatus.OK)
     @PreAuthorize("hasRole('ADMIN')")
-    public MessageDto list(@RequestBody(required = false) UserDto data) {
-        return new MessageDto(Optional.of(service.findFiltered(Optional.ofNullable(data)
-                        .map(x -> Map.of("email", data.getEmail())).orElse(Map.of()), PageRequest.of(0, pageSize)))
-                .filter(Predicate.not(Slice::isEmpty))
+    public MessageDto list(@RequestParam(value = "offset", required = false) Integer offset,
+                           @RequestParam(value = "limit", required = false) Integer pageSize,
+                           @RequestBody(required = false) UserDto data) {
+        var spec = Optional.ofNullable(data).map(UserDto::getEmail).map(x -> Map.of("email", x)).orElse(Map.of());
+        var pageable = PageRequest.of(Optional.ofNullable(offset).orElse(0),
+                Optional.ofNullable(pageSize).orElse(defaultPageSize));
+        return new MessageDto(Optional.of(service.findFiltered(spec, pageable)).filter(Predicate.not(Slice::isEmpty))
                 .map(list -> {
                     try {
                         return objectMapper.writeValueAsString(list);
